@@ -1,7 +1,8 @@
 === 0.0.6 / 2010-XX-XX
 * Douban::Authorize
   * add verify_token and delete_token
-  * support get_book(:isbn=>isbn)
+  * support get_book(:isbn => isbn)
+  * support get_movie(:imdb => imdb)
 * Douban::Book
   * add method: isbn, isbn10, isbn13
 
